tests/ui/rfcs/rfc-1623-static/rfc1623-2.stderr
error: implementation of `Fn` is not general enough
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^ implementation of `Fn` is not general enough
   |
   = note: `fn(&'0 Foo<'_>) -> &'0 Foo<'_> {id::<&'0 Foo<'_>>}` must implement `Fn<(&'1 Foo<'b>,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `Fn<(&Foo<'_>,)>`

error: implementation of `Fn` is not general enough
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^ implementation of `Fn` is not general enough
   |
   = note: `fn(&Foo<'0>) -> &Foo<'0> {id::<&Foo<'0>>}` must implement `Fn<(&'a Foo<'1>,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `Fn<(&Foo<'_>,)>`

error: implementation of `FnOnce` is not general enough
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^ implementation of `FnOnce` is not general enough
   |
   = note: `fn(&'0 Foo<'_>) -> &'0 Foo<'_> {id::<&'0 Foo<'_>>}` must implement `FnOnce<(&'1 Foo<'b>,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&Foo<'_>,)>`

error: implementation of `FnOnce` is not general enough
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^ implementation of `FnOnce` is not general enough
   |
   = note: `fn(&Foo<'0>) -> &Foo<'0> {id::<&Foo<'0>>}` must implement `FnOnce<(&'a Foo<'1>,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&Foo<'_>,)>`

error: aborting due to 4 previous errors

